
add_module(time "")
add_module(player "time.hpp")
add_module(event "time.hpp")

# add_executable(TestSyncerInterval interval.hpp tests/interval.cpp)
# add_test(NAME TestSyncerInterval COMMAND TestSyncerInterval)

# add_executable(TestSyncerCore types.hpp tests/core.cpp)
# add_test(NAME TestSyncerCore COMMAND TestSyncerCore)

# add_executable(TestSyncerEngine types.hpp engine.hpp tests/engine.cpp)
# add_test(NAME TestSyncerEngine COMMAND TestSyncerEngine)

# add_executable(TestSyncerLoad types.hpp hio.hpp tests/load.cpp)
# add_test(NAME TestSyncerLoad COMMAND TestSyncerLoad)
